package org.example.grpc.service;

import com.example.grpc.Theme;
import com.example.grpc.ThemeId;

public class ThemeServiceImpl implements ThemeService {
    @Override
    public ThemeId createTheme(Theme theme) {
        return null;
    }

    @Override
    public Theme getTheme(ThemeId themeId) {
        return null;
    }
}
